--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ ul {
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
 }
 
 .square:focus {
@@ -43,9 +43,16 @@ ul {
 
 .game {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-board {
+  display: flex;
   flex-direction: row;
 }
 
 .game-info {
   margin-left: 20px;
 }
+
